[Video] Add dummy video/audio tracks inactive to select them later.

Also relax some DCHECKs w.r.t the MediaTracks API being enabled.

BUG=669159
TEST=manual + existing tests.

Review-Url: https://codereview.chromium.org/2532233003
Cr-Commit-Position: refs/heads/master@{#435437}

Former-commit-id: 9ff62f749846d5550a3f90abff959e0745afba5a